--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,11 @@ exclude = [ ".gitignore" ]
 rustdoc-args = ["--html-in-header", "/opt/rustwide/workdir/docs/assets/rustdoc-include-katex-header.html"]
 
 [dependencies]
+ark-secp256k1 = { version = "0.4", default-features = false }
 ark-ff = { version = "0.4", default-features = false }
 ark-ec = { version = "0.4", default-features = false }
 ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
+digest = { version = "0.10", default-features = false, features = ["alloc"] }
 getrandom = { version = "0.2", default-features = false, features = ["js"] }
 rand = { version = "0.8", default-features = false, features = ["alloc", "getrandom", "libc"] }
 sha2 = { version = "0.10", default-features = false }
@@ -30,7 +32,6 @@ zeroize = { version = "1", default-features = false, features = ["alloc", "zeroi
 
 [dev-dependencies]
 criterion = { version = "0.3" }
-ark-bn254 = { version = "0.4" }
 
 [[bench]]
 name = "dkg"
