--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - run: |
-          cargo +nightly tarpaulin --verbose --engine llvm --release --out Xml
+          cargo tarpaulin --verbose --engine llvm --release --out Xml
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3.1.1
