ci: specify toolchain

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
       - name: Run tests
         uses: actions-rs/cargo@v1
         with:
@@ -30,6 +32,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
       - name: Add target
         run: rustup target add ${{ matrix.target }}
       - name: cargo fetch
@@ -46,6 +50,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
       # Build benchmarks to prevent bitrot
       - name: Build benchmarks
         uses: actions-rs/cargo@v1
@@ -61,8 +67,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
+          toolchain: stable
           components: clippy
-          override: true
       - name: Run clippy
         uses: actions-rs/clippy-check@v1
         with:
@@ -77,6 +83,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
       # Ensure all code has been formatted with rustfmt
       - run: rustup component add rustfmt
       - name: Check formatting
