--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ digest = { version = "0.10", default-features = false, features = ["alloc"] }
 getrandom = { version = "0.2", default-features = false, features = ["js"] }
 rand = { version = "0.8", default-features = false, features = ["alloc", "getrandom", "libc"] }
 sha2 = { version = "0.10", default-features = false }
-aes = { version = "0.7", default-features = false, features = ["ctr"] }
+aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc", "getrandom", "zeroize"] }
 hkdf = { version = "0.12", default-features = false }
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 
