--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -12,7 +12,8 @@ jobs:
     name: Code coverage
     runs-on: ubuntu-latest
     container:
-      image: xd009642/tarpaulin:develop-nightly
+      # See https://github.com/xd009642/tarpaulin/issues/1282 for usage of older nightly revision
+      image: xd009642/tarpaulin:develop-nightly-2024-02-1
       options: --security-opt seccomp=unconfined
 
     steps:
