change: libraries should not impose the js feature chore: update criterion to latest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ ark-ff = { version = "0.4", default-features = false }
 ark-ec = { version = "0.4", default-features = false }
 ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
 digest = { version = "0.10", default-features = false, features = ["alloc"] }
-getrandom = { version = "0.2", default-features = false, features = ["js"] }
+getrandom = { version = "0.2", default-features = false }
 rand = { version = "0.8", default-features = false, features = ["alloc", "getrandom", "libc"] }
 sha2 = { version = "0.10", default-features = false }
 aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc", "getrandom", "zeroize"] }
@@ -32,7 +32,7 @@ hkdf = { version = "0.12", default-features = false }
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 
 [dev-dependencies]
-criterion = { version = "0.3" }
+criterion = { version = "0.5" }
 
 [[bench]]
 name = "dkg"
