--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -1,10 +1,11 @@
 name: Coverage
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  # Re-enable when https://github.com/xd009642/tarpaulin/issues/1493 is fixed
+  # push:
+  #   branches: [main]
+  # pull_request:
+  #   branches: [main]
   workflow_dispatch:
 
 jobs:
